# hrairto

./: .gitattributes  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: rust.yml  typescript.yml
claude-instructions/: 0000-hrairto-overview.md  0001-yearly-goals.md  0002-weekly-planning.md  0003-concern-main-quest-overhaul.md  0004-midday-checkin.md  northstar_design_brief.md
claude-instructions/old/: data_model.mermaid
src/: TrayPopup.tsx  YearlyGoals.tsx  api.ts  bindings.ts  css-types.d.ts  goals-main.tsx  index.css  main.tsx  midday-main.tsx  mockData.ts  weekly-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json  midday.json
src-tauri/src/: calendar.rs  lib.rs  main.rs  models.rs
src-tauri/src/models/: erd-key.md  mod.rs  stored.md  stored.rs  views.rs
src-tauri/src/ui/: goals.rs  midday.rs  mod.rs  tray.rs  weekly.rs  window_types.rs
src/components/: QuarterCard.test.tsx  SwimlanesContainer.tsx  WaypointList.test.tsx  WaypointList.tsx  WeightDisplay.tsx
src/goals/: ActivityCard.test.tsx  ActivityCard.tsx  GoalSubRow.tsx  GoalTimeline.tsx  GoalTree.css  GoalTreeHeader.tsx  GoalTreeView.tsx  QuarterCard.test.tsx  QuarterCard.tsx  QuarterScroller.tsx  SideQuestSection.tsx  SwimlaneRow.tsx  (+7 more)
tests/: goals-scroll.spec.ts  midday.spec.ts  weekly.spec.ts
ui-test-entrypoints/: goals.html  midday.html  weekly.html
(+31 files in other folders)
