[package]
name = "hrairto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hrairto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
# specta/tauri-specta are pinned to release-candidate versions. The numbers are not
# paired 1:1 (tauri-specta rc.21 requires specta rc.22). Later specta (rc.25) uses
# std's `fmt::from_fn`, which needs Rust 1.90+; we pin to rc.22 so the crate builds on
# the stable toolchain CI uses (`dtolnay/rust-toolchain@stable`).
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
# v7 ids are time-sortable (ULID-like) while remaining standard UUIDs.
uuid = { version = "1", features = ["serde", "v7"] }

